--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: rag
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -11,6 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-write-timeout: "60"
+    # nginx.ingress.kubernetes.io/rewrite-target: /$1
+    # nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
 spec:
   ingressClassName: nginx
   rules:
@@ -21,6 +19,18 @@ spec:
             pathType: Prefix
             backend:
               service:
+                name: qdrantdb
+                port:
+                  number: 6333
+    - host: rag-api.local
+      http:
+        paths:
+          - path: /rag-api
+            # - path: /rag-api(/|$)(.*)
+            # pathType: ImplementationSpecific
+            pathType: Prefix
+            backend:
+              service:
                 name: rag-api
                 port:
-                  number: 80
+                  number: 8000
