--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -6,3 +6,84 @@ metadata:
 type: Opaque
 stringData:
   apiKey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.II_Y19M_QxoUWGqhMcjtR9eqfPkCzJUvYW50WIjxcjc"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: supabase-secrets
+  namespace: rag
+type: Opaque
+stringData:
+  # databse
+  POSTGRES_HOST: postgre.rag.svc.cluster.local
+  POSTGRES_PORT: "5432"
+  POSTGRES_DB: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+
+  # Database URLs
+  DATABASE_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
+  DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
+  SUPABASE_DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
+
+  # JWT Configuration
+  JWT_SECRET: lfO8KbuHklqCLpYMczpxK5fm0fzcVVcAeRdrJEqN0Hk=
+  JWT_EXP: "3600"
+
+  # API Keys (실제 운영환경에서는 안전한 키로 교체 필요)
+  ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjQxNzY5MjAwLCJleHAiOjE5NTczNDUyMDB9.nsv6ak_BFsjGN9cQ3BzYN35ZExCLgXF8E7O1tx55MSs
+  SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2NDE3NjkyMDAsImV4cCI6MTk1NzM0NTIwMH0.jqfokAqE3gTctYye5_6c8PQwslWUgQKaWOiVq5YgwcE
+
+  SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjQxNzY5MjAwLCJleHAiOjE5NTczNDUyMDB9.nsv6ak_BFsjGN9cQ3BzYN35ZExCLgXF8E7O1tx55MSs
+  SUPABASE_SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2NDE3NjkyMDAsImV4cCI6MTk1NzM0NTIwMH0.jqfokAqE3gTctYye5_6c8PQwslWUgQKaWOiVq5YgwcE
+
+  # Supabase URL
+  SUPABASE_URL: http://supabase-kong.rag.svc.cluster.local:8000
+  API_EXTERNAL_URL: http://supabase-kong.rag.svc.cluster.local:8000
+
+  # GoTrue (Auth) Configuration
+  GOTRUE_SITE_URL: http://supabase-kong.rag.svc.cluster.local:3000
+  GOTRUE_URI_ALLOW_LIST: "*"
+  GOTRUE_DISABLE_SIGNUP: "false"
+  GOTRUE_JWT_ADMIN_ROLES: service_role
+  GOTRUE_JWT_AUD: authenticated
+  GOTRUE_JWT_DEFAULT_GROUP_NAME: authenticated
+  GOTRUE_EXTERNAL_EMAIL_ENABLED: "true"
+  GOTRUE_MAILER_AUTOCONFIRM: "true"
+  GOTRUE_SMTP_HOST: ""
+  GOTRUE_SMTP_PORT: "587"
+  GOTRUE_SMTP_USER: ""
+  GOTRUE_SMTP_PASS: ""
+  GOTRUE_SMTP_ADMIN_EMAIL: admin@example.com
+  GOTRUE_MAILER_URLPATHS_CONFIRMATION: /auth/v1/verify
+  GOTRUE_MAILER_URLPATHS_INVITE: /auth/v1/verify
+  GOTRUE_MAILER_URLPATHS_RECOVERY: /auth/v1/verify
+  GOTRUE_MAILER_URLPATHS_EMAIL_CHANGE: /auth/v1/verify
+
+  # PostgREST Configuration
+  PGRST_DB_URI: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
+  PGRST_DB_SCHEMA: public,storage
+  PGRST_DB_ANON_ROLE: anon
+  PGRST_DB_USE_LEGACY_GUCS: "false"
+  PGRST_JWT_SECRET: lfO8KbuHklqCLpYMczpxK5fm0fzcVVcAeRdrJEqN0Hk=
+
+  # Realtime Configuration
+  DB_HOST: postgre.rag.svc.cluster.local
+  DB_PORT: "5432"
+  DB_NAME: postgres
+  DB_USER: postgres
+  DB_PASSWORD: postgres
+  DB_SSL: "false"
+  PORT: "4000"
+  REPLICATION_MODE: RLS
+  REPLICATION_POLL_INTERVAL: "100"
+  SECURE_CHANNELS: "true"
+  SLOT_NAME: supabase_realtime_rls
+  TEMPORARY_SLOT: "true"
+
+  # Storage Configuration (선택사항)
+  STORAGE_BACKEND: file
+  FILE_STORAGE_BACKEND_PATH: /var/lib/storage
+
+  # Secret Key Base (Realtime용)
+  SECRET_KEY_BASE: lfO8KbuHklqCLpYMczpxK5fm0fzcVVcAeRdrJEqN0Hk=
