user목록 초회 처리(jwt), logging decorator보완

--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -22,20 +22,20 @@ stringData:
   POSTGRES_PASSWORD: postgres
 
   # Database URLs
-  DATABASE_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
-  DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
-  SUPABASE_DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres
+  DATABASE_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres?search_path=auth,public
+  DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres?search_path=auth,public
+  SUPABASE_DB_URL: postgresql://postgres:postgres@postgre.rag.svc.cluster.local:5432/postgres?search_path=auth,public
 
   # JWT Configuration
   JWT_SECRET: lfO8KbuHklqCLpYMczpxK5fm0fzcVVcAeRdrJEqN0Hk=
   JWT_EXP: "3600"
 
   # API Keys (실제 운영환경에서는 안전한 키로 교체 필요)
-  ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjQxNzY5MjAwLCJleHAiOjE5NTczNDUyMDB9.nsv6ak_BFsjGN9cQ3BzYN35ZExCLgXF8E7O1tx55MSs
-  SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2NDE3NjkyMDAsImV4cCI6MTk1NzM0NTIwMH0.jqfokAqE3gTctYye5_6c8PQwslWUgQKaWOiVq5YgwcE
+  ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNzY5ODY1Njg1LCJleHAiOjE3NzI0NTc2ODV9.YTDJCS_4jnlfWo9CoWrqd-A0lX1ljk4E7by7dhk65D0
+  SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE3Njk4NjU2ODUsImV4cCI6MTc3MjQ1NzY4NX0.pume4V_7zwNQiYvtBTX9KMNitXDg8LBN5hs0xwgQ0a0
 
-  SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjQxNzY5MjAwLCJleHAiOjE5NTczNDUyMDB9.nsv6ak_BFsjGN9cQ3BzYN35ZExCLgXF8E7O1tx55MSs
-  SUPABASE_SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2NDE3NjkyMDAsImV4cCI6MTk1NzM0NTIwMH0.jqfokAqE3gTctYye5_6c8PQwslWUgQKaWOiVq5YgwcE
+  SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNzY5ODY1Njg1LCJleHAiOjE3NzI0NTc2ODV9.YTDJCS_4jnlfWo9CoWrqd-A0lX1ljk4E7by7dhk65D0
+  SUPABASE_SERVICE_ROLE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxvY2FsaG9zdCIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE3Njk4NjU2ODUsImV4cCI6MTc3MjQ1NzY4NX0.pume4V_7zwNQiYvtBTX9KMNitXDg8LBN5hs0xwgQ0a0
 
   # Supabase URL
   SUPABASE_URL: http://supabase-kong.rag.svc.cluster.local:8000
