--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -87,3 +87,5 @@ stringData:
 
   # Secret Key Base (Realtime용)
   SECRET_KEY_BASE: lfO8KbuHklqCLpYMczpxK5fm0fzcVVcAeRdrJEqN0Hk=
+
+  OPENAI_API_KEY: xxxx
