--- a/deploy/supabase-service.yaml
+++ b/deploy/supabase-service.yaml
@@ -19,6 +19,35 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: supabase-studio
+  namespace: rag
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 5000
+      targetPort: 3000
+      protocol: TCP
+  selector:
+    app: supabase-studio
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: meta
+  namespace: rag
+spec:
+  type: ClusterIP
+  ports:
+    - port: 8080
+      targetPort: 8080
+      protocol: TCP
+      name: http
+  selector:
+    app: supabase-meta
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: supabase-auth
   namespace: rag
 spec:
